--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,4 +44,12 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
     implementation project(path: ':flutter')
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation("com.github.bumptech.glide:glide:4.8.0") {
+        exclude group: 'com.android.support'
+    }
+    annotationProcessor("com.github.bumptech.glide:compiler:4.8.0") {
+        exclude group: 'com.android.support'
+    }
 }
