--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     
+    ext {
+        kotlin_version = '1.3.61'
+    }
     repositories {
         google()
         maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
