--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,3 +8,4 @@ evaluate(new File(
 
 include ':flutter_module'
 project(':flutter_module').projectDir = new File('../flutter_module')
+include ':kotlin_module'
